--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.0.10",
+        "chart.js": "^4.2.0",
         "element-plus": "^2.2.19",
         "font-awesome": "^4.7.0",
         "moment": "^2.29.4",
         "qrcode-reader-vue3": "^3.1.2",
         "qrcode.vue": "^3.3.3",
         "vue": "^3.2.36",
+        "vue-chartjs": "^5.2.0",
         "vue-sweetalert2": "^5.0.5"
     }
 }
